--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,13 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+  "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
+  "web": "expo start --web",
+  "build:web": "EXPO_WEB_BUNDLER=webpack expo export:web",
+  "build": "npm run build:web",
     "lint": "expo lint"
   },
   "dependencies": {
@@ -53,11 +55,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+  "@expo/webpack-config": "^18.0.0",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
   },
   "private": true,
+  "engines": {
+    "node": ">=20.19.4"
+  },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
